# Zephyr

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.5fff18a  README.md
resources/: resources.qrc
resources/styles/: dark.css  light.css
src/: alertssection.cpp  alertssection.h  apikey.h  citiessection.cpp  citiessection.h  forecastsection.cpp  forecastsection.h  forecastssection.cpp  forecastssection.h  main.cpp  mainwindow.cpp  mainwindow.h  mapssection.cpp  mapssection.h  settingsdialog.cpp  settingsdialog.h  weathercard.cpp  weathercard.h
src/interfaces/: IDataAnalyzer.h  IHeatMapGenerator.h  ITTSProvider.h  IWeatherClient.h
src/settings/: SettingsManager.cpp  SettingsManager.h
